    Reported by: Anonymous
    Fixed by: Bas van der Vlies

  * Added a new option 'only_strip_on_update', default value is False. Only call the functions
    strip_quotes and strip_signature for ticket updates, closes #192
    Requested by, Patch:  Konstantin Ryabitsev <icon add mricon dot com>
    Appplied by: Bas van der Vlies

  * Added a new option 'strip_signature_regex', default value: 
      * '^-----Original Message-----$|^-- $'
    This will strip signatures form the email messages. People can set their own regular
    expressions, closes #296, #155
    Author: steverweber add gmail dot com
    Appplied by: Bas van der Vlies

2.5.0 
  * BLOG improvements by Thomas Moschny, closes #287,#235,#175:
   - Tries to use the 'Date:' email header to set the date of the blog
     post or comment.
   - Allows overriding author and categories via subject parameters or
     inline properties (see below).
   - Does not add the 'blog_' prefix to the default (short-) name of a
     blog entry anymore, as it would be rather redundant.
   - Allows selecting a custom short name for the blog entry instead of
     a default date-based short name. The custom short name may not
     contain spaces. (Note that the TracFullBlogPlugin imposes
     additional rules for valid short names.)
   - Bugfix: Fixes crash wile processing mails with attachments (#175).
   - Properly adds attachments to blog entries (#175).

    Author: Thomas Moschny
    Applied by: Bas van der Vlies

  * Added new parameters:
     - white_list_registered_users
     - white_list_file
  
   white_list_registered_users:  
    This will allow registered user to create or update a ticket even
    when they are not added to the 'white_list' in the configuration 
    file.

   white_list_file:
    This will read allowed users from a file. One email address per line.

   Suggested by: randy add psg dot com, closes ticket #288
   Author: Bas van der Vlies

2.4.7 